sinalcabo/force-app/main/default/objects/Revisao_Proposta__c/Revisao_Proposta__c.object-meta.xml
<CustomObject>
    <description>SinalCabo (B.2) - histórico de revisões da proposta. Um registo por volta atrás ao pipeline (recusa interna ou pedido do cliente em negociação), com motivo e valores antes/depois. Child master-detail da Opportunity.</description>
    <label>Revisão da Proposta</label>
    <nameField>
        <displayFormat>REV-{00000}</displayFormat>
        <label>Revisão</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revisões da Proposta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>