sinalcabo/force-app/main/default/objects/Revisao_Proposta__c/fields/Custo_Antes__c.field-meta.xml
<CustomField>
    <fullName>Custo_Antes__c</fullName>
    <description>SinalCabo (B.2) - custo estimado antes desta revisão.</description>
    <label>Custo (antes)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>