sinalcabo/force-app/main/default/objects/Revisao_Proposta__c/fields/Custo_Depois__c.field-meta.xml
<CustomField>
    <fullName>Custo_Depois__c</fullName>
    <description>SinalCabo (B.2) - custo estimado depois desta revisão.</description>
    <label>Custo (depois)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>