sinalcabo/force-app/main/default/objects/Revisao_Proposta__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>SinalCabo (B.2) - data/hora em que a revisão foi registada.</description>
    <label>Data</label>
    <type>DateTime</type>
</CustomField>