sinalcabo/force-app/main/default/objects/Revisao_Proposta__c/fields/Margem_Antes__c.field-meta.xml
<CustomField>
    <fullName>Margem_Antes__c</fullName>
    <description>SinalCabo (B.2) - margem percentual antes desta revisão. Em pontos percentuais (30 = 30%), igual a Opportunity.Margem_Percentual__c.</description>
    <label>Margem % (antes)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>