sinalcabo/force-app/main/default/objects/Revisao_Proposta__c/fields/Margem_Depois__c.field-meta.xml
<CustomField>
    <fullName>Margem_Depois__c</fullName>
    <description>SinalCabo (B.2) - margem percentual depois desta revisão. Em pontos percentuais (30 = 30%).</description>
    <label>Margem % (depois)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>