sinalcabo/force-app/main/default/objects/Revisao_Proposta__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <description>SinalCabo (B.2) - motivo da revisão pedida pelo cliente. Em revisões por recusa interna fica vazio (o motivo da recusa vai na Nota).</description>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preço (reduzir)</fullName>
            </value>
            <value>
                <fullName>Preço (aumentar)</fullName>
            </value>
            <value>
                <fullName>Alteração técnica</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>