sinalcabo/force-app/main/default/objects/Revisao_Proposta__c/fields/Nota__c.field-meta.xml
<CustomField>
    <fullName>Nota__c</fullName>
    <description>SinalCabo (B.2) - descrição livre da revisão. Em recusa interna recebe o comentário do aprovador.</description>
    <label>Nota</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>