sinalcabo/force-app/main/default/objects/Revisao_Proposta__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <description>SinalCabo (B.2) - oportunidade a que esta revisão pertence.</description>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Revisões da Proposta</relationshipLabel>
    <relationshipName>Revisoes_Proposta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>