sinalcabo/force-app/main/default/objects/Revisao_Proposta__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <description>SinalCabo (B.2) - o que despoletou a revisão: recusa interna na aprovação ou pedido do cliente em negociação.</description>
    <label>Origem</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recusa interna</fullName>
            </value>
            <value>
                <fullName>Pedido do cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>