sinalcabo/force-app/main/default/objects/Revisao_Proposta__c/fields/Valor_Antes__c.field-meta.xml
<CustomField>
    <fullName>Valor_Antes__c</fullName>
    <description>SinalCabo (B.2) - valor da proposta antes desta revisão.</description>
    <label>Valor (antes)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>