sinalcabo/force-app/main/default/objects/Revisao_Proposta__c/fields/Valor_Depois__c.field-meta.xml
<CustomField>
    <fullName>Valor_Depois__c</fullName>
    <description>SinalCabo (B.2) - valor da proposta depois desta revisão.</description>
    <label>Valor (depois)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>