sinalcabo/force-app/main/default/objects/Revisao_Proposta__c/fields/Versao__c.field-meta.xml
<CustomField>
    <fullName>Versao__c</fullName>
    <description>SinalCabo (B.2) - número da versão da proposta resultante desta revisão.</description>
    <label>Versão</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>